--- a/app/src/main/res/layout/fragment_dam.xml
+++ b/app/src/main/res/layout/fragment_dam.xml
@@ -1,52 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context="Dam">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"            xmlns:tools="http://schemas.android.com/tools"            xmlns:app="http://schemas.android.com/apk/res-auto"            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:background="@drawable/regsc">
+    <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
+            tools:context="Dam"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="3dp"
+            android:layout_margin="15dp"
+            android:foreground="?selectableItemBackground"
+            android:id="@+id/Card_View"
+            android:background="@color/black"
+            android:clickable="true">
 
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.cardview.widget.CardView android:layout_width="380dp" android:layout_height="280dp"
-                                       android:layout_marginTop="30dp"
-                                       android:layout_marginLeft="15dp"
-                                       android:layout_marginRight="15dp"
-                                       app:cardCornerRadius="4dp">
-
-        <TextView
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/pullt1"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:text=" Grip Pullup"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <ImageView android:layout_width="350dp" android:layout_height="250dp"
-                   android:id="@+id/pulli1"
-                   android:src="@drawable/mdam"
-                   android:layout_marginTop="40dp"
-                   android:layout_marginLeft="15dp"
-                   android:layout_marginRight="15dp"/>
-    </androidx.cardview.widget.CardView>
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/ki1"
+                    android:src="@drawable/kdam"
+                    android:scaleType="centerCrop"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/kt1"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:text="Khadakwasla Dam"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/kt2"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:text="Khadakwasla Dam is a dam on the Mutha River 21 km from the centre of the city of Pune in Maharashtra, India. The dam created a reservoir known as Khadakwasla Lake which is the main source of water for Pune and its suburbs."/>
+        </LinearLayout>
 
-    <androidx.cardview.widget.CardView android:layout_width="380dp" android:layout_height="280dp"
-                                       android:layout_marginTop="320dp"
-                                       android:layout_marginLeft="15dp"
-                                       android:layout_marginRight="15dp"
-                                       app:cardCornerRadius="4dp">
-
-        <TextView
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:text=" Arched back Pullup "/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="370dp">
 
-        <ImageView android:layout_width="350dp" android:layout_height="250dp"
-                   android:id="@+id/hill2"
-                   android:src="@drawable/kdam"
-                   android:layout_marginTop="40dp"
-                   android:layout_marginLeft="15dp"
-                   android:layout_marginRight="15dp"/>
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/mi1"
+                    android:src="@drawable/mdam"
+                    android:scaleType="centerCrop"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/mt1"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textAlignment="center"
+                    android:text="Mulashi Dam"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/mt2"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textColor="@color/black"
+                    android:text="Mulshi is the name of a major dam on the Mula river. It is located in the Mulshi taluka administrative division of the Pune.Water from the dam is used for irrigation as well as for producing electricity at the Bhira hydroelectric power plant."/>      </LinearLayout>
+
+        <!--    <androidx.cardview.widget.CardView -->
+        <!--            android:layout_width="match_parent" -->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="320dp"-->
+        <!--            android:layout_marginLeft="15dp"-->
+        <!--            android:layout_marginRight="15dp"-->
+        <!--            app:cardCornerRadius="4dp"-->
+        <!--            android:clickable="true">-->
+
+        <!--        <TextView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="match_parent"-->
+        <!--                android:textSize="20sp"-->
+        <!--                android:textStyle="bold"-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:textAlignment="center"-->
+        <!--                android:text="Tiger Hill Lonavala"/>-->
+
+        <!--        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"-->
+        <!--                   android:id="@+id/pup2"-->
+        <!--                   android:src="@drawable/tighill"-->
+        <!--                   android:layout_marginTop="40dp"-->
+        <!--                   android:layout_marginLeft="15dp"-->
+        <!--                   android:layout_marginRight="15dp"/>-->
+        <!--        -->
+        <!--    </androidx.cardview.widget.CardView>-->
+
     </androidx.cardview.widget.CardView>
-
-</FrameLayout>
+</ScrollView>
