--- a/app/src/main/res/layout/fragment_fort.xml
+++ b/app/src/main/res/layout/fragment_fort.xml
@@ -1,52 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context="Fort">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"            xmlns:tools="http://schemas.android.com/tools"            xmlns:app="http://schemas.android.com/apk/res-auto"            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:background="@drawable/regsc">
+    <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
+            tools:context="Fort"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="3dp"
+            android:layout_margin="15dp"
+            android:foreground="?selectableItemBackground"
+            android:id="@+id/Card_View"
+            android:background="@color/black"
+            android:clickable="true">
 
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.cardview.widget.CardView android:layout_width="380dp" android:layout_height="280dp"
-                                       android:layout_marginTop="30dp"
-                                       android:layout_marginLeft="15dp"
-                                       android:layout_marginRight="15dp"
-                                       app:cardCornerRadius="4dp">
-
-        <TextView
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/pullt1"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:text=" Grip Pullup"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <ImageView android:layout_width="350dp" android:layout_height="250dp"
-                   android:id="@+id/pulli1"
-                   android:src="@drawable/lfort"
-                   android:layout_marginTop="40dp"
-                   android:layout_marginLeft="15dp"
-                   android:layout_marginRight="15dp"/>
-    </androidx.cardview.widget.CardView>
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/li1"
+                    android:src="@drawable/lfort"
+                    android:scaleType="centerCrop"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lt1"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:text=" Lohgad Fort "/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lt2"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:text="Lohagad is one of the many hill forts of Maharashtra state in India. Situated close to the hill station Lonavala and 52 km northwest of Pune, Lohagad rises to an elevation of 1,033 m above sea level. The fort is connected to the neighboring Visapur fort by a small range."/>
+        </LinearLayout>
 
-    <androidx.cardview.widget.CardView android:layout_width="380dp" android:layout_height="280dp"
-                                       android:layout_marginTop="320dp"
-                                       android:layout_marginLeft="15dp"
-                                       android:layout_marginRight="15dp"
-                                       app:cardCornerRadius="4dp">
-
-        <TextView
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:text=" Arched back Pullup "/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="370dp">
 
-        <ImageView android:layout_width="350dp" android:layout_height="250dp"
-                   android:id="@+id/hill2"
-                   android:src="@drawable/rfort"
-                   android:layout_marginTop="40dp"
-                   android:layout_marginLeft="15dp"
-                   android:layout_marginRight="15dp"/>
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/ri1"
+                    android:src="@drawable/tighill"
+                    android:scaleType="centerCrop"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rt1"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textAlignment="center"
+                    android:text="Rajgad Fort"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rt2"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textColor="@color/black"
+                    android:text="Rajgad is a hill fort, Formerly known as Murumdev. The fort was the capital of the Maratha Empire under the rule of Chatrapati Shivaji Maharaj for almost 26 years, after which the capital was moved to the Raigad Fort."/>
+        </LinearLayout>
+
+        <!--    <androidx.cardview.widget.CardView -->
+        <!--            android:layout_width="match_parent" -->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="320dp"-->
+        <!--            android:layout_marginLeft="15dp"-->
+        <!--            android:layout_marginRight="15dp"-->
+        <!--            app:cardCornerRadius="4dp"-->
+        <!--            android:clickable="true">-->
+
+        <!--        <TextView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="match_parent"-->
+        <!--                android:textSize="20sp"-->
+        <!--                android:textStyle="bold"-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:textAlignment="center"-->
+        <!--                android:text="Tiger Hill Lonavala"/>-->
+
+        <!--        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"-->
+        <!--                   android:id="@+id/pup2"-->
+        <!--                   android:src="@drawable/tighill"-->
+        <!--                   android:layout_marginTop="40dp"-->
+        <!--                   android:layout_marginLeft="15dp"-->
+        <!--                   android:layout_marginRight="15dp"/>-->
+        <!--        -->
+        <!--    </androidx.cardview.widget.CardView>-->
+
     </androidx.cardview.widget.CardView>
-
-</FrameLayout>
+</ScrollView>
